# tap-thegraph

./: .gitignore  README.md  config.json  meltano.yml  pyproject.toml  tox.ini
examples/: compound_v2_markets.json  uniswap_v2_mints_and_burns.json
output/: ethereum-mainnet_Block.jsonl
subgraph-to-json-schema/: README.md  package.json
subgraph-to-json-schema/src/: index.ts
tap_thegraph/: client.py  streams.py  tap.py
tap_thegraph/tests/: __init__.py  test_core.py
